Bug 332403 - Dolphin crash when changing the rating of a file in baloo search results
Summary: Dolphin crash when changing the rating of a file in baloo search results
Status: RESOLVED FIXED
Alias: None
Product: Baloo
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2014-03-21 14:00 UTC by mostheinl
Modified: 2014-04-07 16:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
GDB Backtrace of crash when rating is changed in baloo search window in dolphin (5.25 KB, text/plain)
2014-03-24 16:40 UTC, mostheinl
Details
Valgrind output of crash when rating is changed in baloo search window in dolphin (14.89 KB, text/plain)
2014-03-24 16:41 UTC, mostheinl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mostheinl 2014-03-21 14:00:06 UTC
Application: dolphin (4.12.95)
KDE Platform Version: 4.12.95
Qt Version: 4.8.5
Operating System: Linux 3.11.10-7-desktop i686
Distribution: "openSUSE 13.1 (Bottle) (i586)"

-- Information about the crash:
- What I was doing when the application crashed:

Rated some files on my hard disk. Performed a baloo search in dolphin (indexing enabled), clicked on a found file in the search results and tried to change its rating in the side panel.

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (dolphin), signal: Aborted
Using host libthread_db library "/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0xb5421740 (LWP 15501))]

Thread 4 (Thread 0xae532b40 (LWP 15508)):
#0  0xb771d416 in __kernel_vsyscall ()
#1  0xb5f66372 in clock_gettime () from /lib/libc.so.6
#2  0xb6cb707c in do_gettime (frac=0xae531ff0, sec=0xae531fe8) at tools/qelapsedtimer_unix.cpp:127
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:144
#4  0xb6d9ce82 in updateCurrentTime (this=0xadc02074) at kernel/qeventdispatcher_unix.cpp:354
#5  QTimerInfoList::timerWait (this=this@entry=0xadc02074, tm=...) at kernel/qeventdispatcher_unix.cpp:460
#6  0xb6d9b43b in timerSourcePrepareHelper (src=src@entry=0xadc02040, timeout=0xae5320ec) at kernel/qeventdispatcher_glib.cpp:136
#7  0xb6d9b4ca in timerSourcePrepare (source=0xadc02040, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#8  0xb590f0e3 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#9  0xb590f9ff in ?? () from /usr/lib/libglib-2.0.so.0
#10 0xb590fc48 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#11 0xb6d9b60f in QEventDispatcherGlib::processEvents (this=0xadc00468, flags=...) at kernel/qeventdispatcher_glib.cpp:427
#12 0xb6d6aa03 in QEventLoop::processEvents (this=this@entry=0xae532258, flags=...) at kernel/qeventloop.cpp:149
#13 0xb6d6ad29 in QEventLoop::exec (this=this@entry=0xae532258, flags=...) at kernel/qeventloop.cpp:204
#14 0xb6c5930d in QThread::exec (this=this@entry=0x96e0b60) at thread/qthread.cpp:536
#15 0xb6d4ae14 in QInotifyFileSystemWatcherEngine::run (this=0x96e0b60) at io/qfilesystemwatcher_inotify.cpp:256
#16 0xb6c5bc5f in QThreadPrivate::start (arg=0x96e0b60) at thread/qthread_unix.cpp:338
#17 0xb6bd807a in start_thread () from /lib/libpthread.so.0
#18 0xb5f5880e in clone () from /lib/libc.so.6

Thread 3 (Thread 0xada9fb40 (LWP 15513)):
#0  0xb771d416 in __kernel_vsyscall ()
#1  0xb5f66372 in clock_gettime () from /lib/libc.so.6
#2  0xb6cb707c in do_gettime (frac=0xada9f020, sec=0xada9f018) at tools/qelapsedtimer_unix.cpp:127
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:144
#4  0xb6d9ce82 in updateCurrentTime (this=0xad102074) at kernel/qeventdispatcher_unix.cpp:354
#5  QTimerInfoList::timerWait (this=this@entry=0xad102074, tm=...) at kernel/qeventdispatcher_unix.cpp:460
#6  0xb6d9b43b in timerSourcePrepareHelper (src=src@entry=0xad102040, timeout=0xada9f11c) at kernel/qeventdispatcher_glib.cpp:136
#7  0xb6d9b4ca in timerSourcePrepare (source=0xad102040, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#8  0xb590f0e3 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#9  0xb590f9ff in ?? () from /usr/lib/libglib-2.0.so.0
#10 0xb590fc48 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#11 0xb6d9b60f in QEventDispatcherGlib::processEvents (this=0xad100468, flags=...) at kernel/qeventdispatcher_glib.cpp:427
#12 0xb6d6aa03 in QEventLoop::processEvents (this=this@entry=0xada9f288, flags=...) at kernel/qeventloop.cpp:149
#13 0xb6d6ad29 in QEventLoop::exec (this=this@entry=0xada9f288, flags=...) at kernel/qeventloop.cpp:204
#14 0xb6c5930d in QThread::exec (this=this@entry=0x98dec10) at thread/qthread.cpp:536
#15 0xb6c5945b in QThread::run (this=0x98dec10) at thread/qthread.cpp:603
#16 0xb6c5bc5f in QThreadPrivate::start (arg=0x98dec10) at thread/qthread_unix.cpp:338
#17 0xb6bd807a in start_thread () from /lib/libpthread.so.0
#18 0xb5f5880e in clone () from /lib/libc.so.6

Thread 2 (Thread 0xad0ffb40 (LWP 15514)):
#0  0xb771d416 in __kernel_vsyscall ()
#1  0xb5f66372 in clock_gettime () from /lib/libc.so.6
#2  0xb6cb707c in do_gettime (frac=0xad0feff0, sec=0xad0fefe8) at tools/qelapsedtimer_unix.cpp:127
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:144
#4  0xb6d9ce82 in updateCurrentTime (this=0x97644ac) at kernel/qeventdispatcher_unix.cpp:354
#5  QTimerInfoList::timerWait (this=this@entry=0x97644ac, tm=...) at kernel/qeventdispatcher_unix.cpp:460
#6  0xb6d9b43b in timerSourcePrepareHelper (src=src@entry=0x9764478, timeout=0xad0ff0ec) at kernel/qeventdispatcher_glib.cpp:136
#7  0xb6d9b4ca in timerSourcePrepare (source=0x9764478, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#8  0xb590f0e3 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#9  0xb590f9ff in ?? () from /usr/lib/libglib-2.0.so.0
#10 0xb590fc48 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#11 0xb6d9b60f in QEventDispatcherGlib::processEvents (this=0x987b980, flags=...) at kernel/qeventdispatcher_glib.cpp:427
#12 0xb6d6aa03 in QEventLoop::processEvents (this=this@entry=0xad0ff258, flags=...) at kernel/qeventloop.cpp:149
#13 0xb6d6ad29 in QEventLoop::exec (this=this@entry=0xad0ff258, flags=...) at kernel/qeventloop.cpp:204
#14 0xb6c5930d in QThread::exec (this=this@entry=0x9771678) at thread/qthread.cpp:536
#15 0xb6d4ae14 in QInotifyFileSystemWatcherEngine::run (this=0x9771678) at io/qfilesystemwatcher_inotify.cpp:256
#16 0xb6c5bc5f in QThreadPrivate::start (arg=0x9771678) at thread/qthread_unix.cpp:338
#17 0xb6bd807a in start_thread () from /lib/libpthread.so.0
#18 0xb5f5880e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb5421740 (LWP 15501)):
[KCrash Handler]
#6  0xb771d416 in __kernel_vsyscall ()
#7  0xb5e986a6 in raise () from /lib/libc.so.6
#8  0xb5e99e33 in abort () from /lib/libc.so.6
#9  0xb606c085 in __gnu_cxx::__verbose_terminate_handler() () from /usr/lib/libstdc++.so.6
#10 0xb6069d03 in ?? () from /usr/lib/libstdc++.so.6
#11 0xb6069d3f in std::terminate() () from /usr/lib/libstdc++.so.6
#12 0xb6069ff5 in __cxa_rethrow () from /usr/lib/libstdc++.so.6
#13 0xb6d6af15 in QEventLoop::exec (this=this@entry=0xbfef1f08, flags=...) at kernel/qeventloop.cpp:218
#14 0xb6d704fe in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1221
#15 0xb6253364 in QApplication::exec () at kernel/qapplication.cpp:3823
#16 0xafcc474a in kdemain (argc=5, argv=0x95c55e8) at /usr/src/debug/kde-baseapps-4.12.95/dolphin/src/main.cpp:93
#17 0x0804fba3 in _start ()

Possible duplicates by query: bug 332381, bug 332310, bug 332299, bug 332266, bug 332178.

Reported using DrKonqi
Comment 1 Christoph Feck 2014-03-22 19:37:28 UTC
If this crash is reproducible, please try to get a backtrace of the exception with gdb. For more information, please see http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports#Retrieving_a_backtrace_when_an_uncaught_exception_is_causing_a_crash
Comment 2 mostheinl 2014-03-24 16:40:43 UTC
Created attachment 85715 [details]
GDB Backtrace of crash when rating is changed in baloo search window in dolphin
Comment 3 mostheinl 2014-03-24 16:41:16 UTC
Created attachment 85716 [details]
Valgrind output of crash when rating is changed in baloo search window in dolphin
Comment 4 mostheinl 2014-03-24 16:42:56 UTC
Attached backtraces.

Noticed that the crash only occurs when baloo_file_extractor is running (but it does all the time at 100% CPU, except when I kill it).
Comment 5 Emmanuel Pescosta 2014-03-24 16:51:02 UTC
Thanks for the backtrace!

Xapian throws an InvalidOperationError exception, these exceptions should definitely be handled inside Baloo's library and not in Dolphin. 

So I'll reassign it.

Thanks for your help!
Comment 6 mostheinl 2014-03-26 13:33:23 UTC
There are backtraces now, I change the status back to UNCONF
Comment 7 Vishesh Handa 2014-04-07 16:18:07 UTC
Git commit 707f61f3c4134b64bdd923cf4dc5199219b79c01 by Vishesh Handa.
Committed on 07/04/2014 at 16:20.
Pushed by vhanda into branch 'KDE/4.13'.

XapianDatabase: Catch more exceptions

M  +12   -4    src/xapian/xapiandatabase.cpp

http://commits.kde.org/baloo/707f61f3c4134b64bdd923cf4dc5199219b79c01