XapianDatabase: Catch more exceptions

BUG: 332403